Fixed contrast quote text

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1360,7 +1360,9 @@ input, select, textarea {
 
 	.compactText {
 		font-size: .95rem;
-		line-height: 1.4;
+		line-height: 1.5;
+		color: rgba(0, 0, 0, 0.75);
+		font-style: italic;
 	}
 
 	.twoCol {
